objects/ASI_CRM_Approval_Comment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_BA_comments__c</fullName>
        <label>BA comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Background_Objective__c</fullName>
        <label>Background &amp; Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Approval Comments</relationshipLabel>
        <relationshipName>Contract_Approval_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Approval Comments</relationshipLabel>
        <relationshipName>Approval_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Historical_Contract_Performance__c</fullName>
        <label>Historical Contract Performance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_contract_Analsysis__c</fullName>
        <label>New contract Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>ASI_TH_CRM_PaymentRequest__c</referenceTo>
        <relationshipLabel>Approval Comments</relationshipLabel>
        <relationshipName>Payment_Request_Approval_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approval Comment</label>
    <listViews>
        <fullName>ASI_CRM_CN_Support</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_CRM_Payment_Request__c</columns>
        <columns>ASI_CRM_BA_comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Approval_Comment__c.ASI_CRM_CN_Payment_Request_Comment</value>
        </filters>
        <filters>
            <field>ASI_CRM_Payment_Request__c</field>
            <operation>equals</operation>
        </filters>
        <label>CN Support</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Approval Comment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Comments</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Customer_Comment</fullName>
        <active>true</active>
        <label>CN Customer Comment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_New_Contract_Comment</fullName>
        <active>true</active>
        <label>CN New Contract Comment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_PO_Contract_Comment</fullName>
        <active>true</active>
        <label>CN PO Contract Comment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Payment_Request_Comment</fullName>
        <active>true</active>
        <label>CN Payment Request Comment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>